# Ticket-Microservice

./: README.md
.github/workflows/: clean-rev-image.yml  go.yml  java.yml  readme.md  rust.yml
auth-service/: Cargo.toml  Dockerfile  readme.md
auth-service/src/: .env  main.rs
auth-service/src/config/: app_config.rs
auth-service/src/domain/: auth_domain.rs  authdomain.rs
auth-service/src/handler/: auth_handler.rs  authhandler.rs  healthcheck.rs  mod.rs
auth-service/src/repository/: http.rs  mod.rs  redis.rs
auth-service/src/service/: authentication.rs  mod.rs  service.rs
infrastructure/: .env  auth-infra.yml  readme.md
tiket-service/: Dockerfile  pom.xml
tiket-service/src/main/java/com/rudy/ryanto/tiket/: TiketServiceApplication.java
tiket-service/src/main/java/com/rudy/ryanto/tiket/config/: KafkaConfig.java  RedisConfig.java  ReselienceConfig.java
tiket-service/src/main/java/com/rudy/ryanto/tiket/controller/: OrderController.java  TikerController.java
tiket-service/src/main/java/com/rudy/ryanto/tiket/domain/: AuditTrail.java  BaseResponse.java  CommonConstants.java
tiket-service/src/main/java/com/rudy/ryanto/tiket/exception/: OrderException.java  (+1 more)
tiket-service/src/main/resources/: application.properties
tiket-service/src/test/java/com/rudy/ryanto/tiket/: TiketServiceApplicationTests.java
user-service/: Dockerfile  go.mod  go.sum  local.env  main.go  readme.md
user-service/config/: config.go
user-service/domain/: user.go
user-service/handler/: health_handler.go  user_handler.go
user-service/messaging/: kafka.go
user-service/repository/: postgres.go  redis.go
user-service/service/: user_service.go
(+16 files in other folders)
