[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dyn-clone = "1.0.17"
hyper = "1.5.1"
jsonwebtoken = "9.3.0"
redis = "0.27.6"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-attributes = "0.1.28"
tracing-subscriber = "0.3.19"
