[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
dyn-clone = "1.0.17"
jsonwebtoken = "9.3.0" # JWT
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.19"
swagger-ui = "0.1.5"
redis = { version = "0.27.6", features = ["aio","tokio-comp"] }
tracing = "0.1.41"
chrono = "0.4"
anyhow = "1.0.94"
