[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros", "tokio", "tower-log", "json"] }
redis = { version = "0.27.6", features = ["aio","tokio-comp"] }
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
anyhow = "1.0.94"
dyn-clone = "1.0.17"
tracing-subscriber = "0.3.19"
jsonwebtoken = "9.3.0" # JWT
reqwest = { version = "0.12.9", features = ["json"] }
chrono = "0.4"
utoipa = "5.2.0"
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "debug-embed"] }

